--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
 }
 
 h1{
-   font-family: "Montserrat-Black";
+   font-family: "Montserrat";
    font-size:3.5rem;
    line-height: 1.5;
    font-weight: 900;
@@ -19,14 +19,20 @@ h1{
 }
 
 h2{
-  font-family: "Montserrat-Black";
+  font-family: "Montserrat";
   font-weight: bold;
   font-size:3rem;
   line-height: 1.2;
 }
 
 h3{
-  font-family: "Montserrat-Black";
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+h5{
+  font-family: "Montserrat";
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -61,9 +67,9 @@ p{
 }
 
 /* Title Section */
-.front {
-  margin-top:60px;
-}
+/* .front {
+  margin-top:30px;
+} */
 
 /* Download Buttons */
 
@@ -129,4 +135,36 @@ p{
 .press-img{
   width:15%;
   margin: 20px 20px 50px;
+}
+
+/* Cuisines Section */
+#pricing{
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.margin2{
+  padding-bottom: 24px;
+}
+
+.pricing-col{
+  padding: 3% ;
+}
+
+/* call-to-action section */
+
+#cta{
+  text-align: center;
+  background-color: #ff4c68;
+  padding: 1% 10%;
+  color: #fff;
+}
+
+/* Footer */
+#footer{
+  background-color: #fff;
+  font-family: "Montserrat"
+  font-size:2rem;
+  line-height: 1.5;
+  text-align: center;
 }
